fixed overflowing scroll bar issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,39 @@
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 2.5px
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+.App{
+  width:100vw;
+  height:100vh;
+  overflow: auto;
+}
 .App-header {
   background-color: #282c34;
   align-items: left;
   justify-content: left;
-  width: 100%;
+  width: 100vw;
+  padding: 1vh 0;
+  margin-bottom: 2vh;
   color: white;
-  padding:5px;
+}
+.App-header-elem{
+  margin:0 1vw;
 }
 .App-title{
   font-size: calc(10px + 2vmin);
@@ -16,29 +45,33 @@
 .App-credit a {
   color: #ffcbcb;
 }
-.content-editor{
-  width:100%;
-}
+
 .content-wrapper{
-  width:100%;
+  width: 100%;
+  height: 80vh;
+  padding: 1vh 1vw;
 }
 .main-container{
-  padding-left: 1vw;
-  padding-right: 1vw;
-  padding-top: 2vh;
-  padding-bottom: 2vh;
-  height: 90vh;
+  height: 85vh;
   display: grid;
+  justify-items: center;
+  padding: 1vh 1vw;
+  grid-column-gap: 1vw;
   grid-template-columns: 1fr 1fr;
 }
+
 #editor-wrapper textarea{
-  width:100%;
-  height: 100%;
   resize:none;
-        /* Opera/IE 8+ */
+  padding: 0;
+  border: 0;
+  width: 100%;
+  height: 100%;
+
 }
 #preview-wrapper{
-  background-color: white;
 
-  overflow-y:auto;
+}
+#preview{
+  overflow-y: scroll;
+  background-color: white;
 }
